internal/octogo/testdata/19_return_statements.ogo
//TODO-
// COMPILE

func noReturn() {
	// Valid: implicit return at the end of block
}

func singleReturn() int {
	return 42
}

func invalidReturnA() int {
	// ERROR "not enough arguments to return|missing return value"
	return
}

func invalidReturnB() int {
	// ERROR "cannot use.*type string.*as type int in return|type mismatch"
	return "error"
}

// Assuming the EBNF supports tuple types for multiple returns like Go,
// but looking at `Type | "(" ParameterList ")"`, let's verify multiple returns:
func multiReturn() (i int, b bool) {
	return 1, true
}

func invalidMultiReturn() (i int, b bool) {
	// ERROR "too many arguments to return|wrong number of return values"
	return 1, true, "extra"
}
